--- a/4. Sistema/proj-sgt/Views/Account/Register.cshtml
+++ b/4. Sistema/proj-sgt/Views/Account/Register.cshtml
@@ -37,11 +37,12 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Cadastrar" />
+            <input type="submit" class="btn btn-primary" id="btnConfirmation" value="Cadastrar" />
         </div>
     </div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
 }
